--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -34,7 +34,8 @@ jobs:
     - name: 📦 Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas numpy google-cloud-storage google-cloud-bigquery python-dateutil
+        pip install pandas numpy google-cloud-storage google-cloud-bigquery pyarrow python-dateutil db-dtypes
+
         
     - name: 🔐 Authenticate to Google Cloud
       uses: google-github-actions/auth@v1
