--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -34,7 +34,7 @@ jobs:
     - name: 📦 Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas numpy google-cloud-storage google-cloud-bigquery pyarrow python-dateutil db-dtypes
+        pip install pandas numpy google-cloud-storage google-cloud-bigquery pyarrow python-dateutil db-dtypes pandas-gbq
 
         
     - name: 🔐 Authenticate to Google Cloud
